# MiniJavaCompiler

./: .gitignore  CMakeLists.txt  Program.cpp  Program.h  README.md  driver.cpp  driver.hh  main.cpp  parser.y  scanner.l
assignments/: Assignment.cpp  Assignment.h  AssignmentList.cpp  AssignmentList.h
base/: BaseElement.h
base_elements/: BaseElement.h
declarations/: ClassDecl.cpp  ClassDecl.h  Declaration.h  DeclarationList.cpp  DeclarationList.h  MethodDecl.cpp  MethodDecl.h  VarDecl.cpp  VarDecl.h
driver/: driver.cpp  driver.hh
expressions/: AddExpression.cpp  AddExpression.h  AndExpression.cpp  AndExpression.h  BinaryExpression.h  DivExpression.cpp  DivExpression.h  Expression.h  FunctionCallExpression.cpp  FunctionCallExpression.h  IdentExpression.cpp  IdentExpression.h  IsEqualExpression.cpp  IsEqualExpression.h  IsGreaterExpression.cpp  IsGreaterExpression.h  IsLessExpression.cpp  IsLessExpression.h  MethodInvExpression.cpp  MethodInvExpression.h  ModuloExpression.cpp  ModuloExpression.h  MulExpression.cpp  MulExpression.h  NumberExpression.cpp  NumberExpression.h  OrExpression.cpp  OrExpression.h  SubtractExpression.cpp  SubtractExpression.h  ThisExpression.cpp  ThisExpression.h
function-mechanisms/: Frame.cpp  Frame.h  FrameEmulator.cpp  FrameEmulator.h  FrameTranslator.cpp  FrameTranslator.h  FunctionStorage.cpp  FunctionStorage.h  FunctionTable.cpp  FunctionTable.h
function-mechanisms/address/: Address.h  AddressInFrame.cpp  AddressInFrame.h  AddressInRegister.cpp  AddressInRegister.h
functions/: Function.cpp  Function.h  FunctionList.cpp  FunctionList.h  ParamList.cpp  ParamList.h  ParamValueList.cpp  ParamValueList.h
include/: driver.cpp  driver.hh
include/visitors/: Visitor.h  forward_decl.h
irtree/: CMakeLists.txt
irtree/blocks/: Block.cpp  Block.h
irtree/generators/: Label.cpp  Label.h  Temporary.cpp  Temporary.h
irtree/nodes/: BaseElement.h  ExpressionList.cpp  ExpressionList.h
irtree/nodes/expressions/: BinopExpression.cpp  BinopExpression.h  CallExpression.cpp  CallExpression.h  ConstExpression.cpp  ConstExpression.h  EseqExpression.cpp  EseqExpression.h  Expression.h  MemExpression.cpp  MemExpression.h  NameExpression.cpp  NameExpression.h  TempExpression.cpp  TempExpression.h
irtree/nodes/statements/: ExpStatement.cpp  ExpStatement.h  JumpConditionalStatement.cpp  JumpConditionalStatement.h  JumpStatement.cpp  JumpStatement.h  LabelStatement.cpp  LabelStatement.h  MoveStatement.cpp  MoveStatement.h  PrintStatement.cpp  PrintStatement.h  SeqStatement.cpp  SeqStatement.h  Statement.h
irtree/opcodes/: AddCode.cpp  AddCode.h  AndCode.cpp  AndCode.h  CmpCode.cpp  CmpCode.h  DivCode.cpp  DivCode.h  JumpCode.cpp  JumpCode.h  LabelCode.cpp  LabelCode.h  LdrCode.cpp  LdrCode.h  MovCode.cpp  MovCode.h  MulCode.cpp  MulCode.h  OpCode.h  OrCode.cpp  OrCode.h  PopCode.cpp  PopCode.h  PopListCode.cpp  PopListCode.h  PushCode.cpp  PushCode.h  PushListCode.cpp  PushListCode.h  StrCode.cpp  StrCode.h  SubCode.cpp  SubCode.h
irtree/traces/: Trace.cpp  Trace.h
irtree/tree_wrapper/: ExpressionWrapper.cpp  ExpressionWrapper.h  StatementWrapper.cpp  StatementWrapper.h  SubtreeWrapper.h
irtree/tree_wrapper/conditional_wrappers/: AndConditionalWrapper.cpp  AndConditionalWrapper.h  ConditionalWrapper.cpp  ConditionalWrapper.h  NegateConditionalWrapper.cpp  NegateConditionalWrapper.h  OrConditionalWrapper.cpp  OrConditionalWrapper.h  RelativeConditionalWrapper.cpp  RelativeConditionalWrapper.h
irtree/types/: BinaryOperatorType.cpp  BinaryOperatorType.h  LogicOperatorType.cpp
irtree/visitors/: AssemblyCodeGenerator.cpp  AssemblyCodeGenerator.h  BaseElements.h  ConflictsGraphVisitor.cpp  ConflictsGraphVisitor.h  DoubleCallEliminateVisitor.cpp  DoubleCallEliminateVisitor.h  EseqEliminateVisitor.cpp  EseqEliminateVisitor.h  LinearizeVisitor.cpp  LinearizeVisitor.h  OpCodeVisitor.h  PrintOpCodeVisitor.cpp  PrintOpCodeVisitor.h  PrintPhysRegVisitor.cpp  PrintPhysRegVisitor.h  PrintVisitor.cpp  PrintVisitor.h  TemplateVisitor.cpp  TemplateVisitor.h  Visitor.h  VisitorStruct.h
main_class/: MainClass.cpp  MainClass.h
objects/: Boolean.cpp  Boolean.h  Class.cpp  Class.h  Integer.cpp  Integer.h  Method.cpp  Method.h  Object.cpp  Object.h  UninitObject.cpp  UninitObject.h
scanner/: scanner.h
statements/: Assignment.cpp  Assignment.h  AssignmentList.cpp  AssignmentList.h  IfStatement.cpp  IfStatement.h  PrintStatement.cpp  PrintStatement.h  ReturnStatement.cpp  ReturnStatement.h  ScopeAssignmentList.cpp  ScopeAssignmentList.h  Statement.h  VarDecl.h  WhileStatement.cpp  WhileStatement.h
symbol_table/: ScopeLayer.cpp  ScopeLayer.h  ScopeLayerTree.cpp  ScopeLayerTree.h  Symbol.cpp  Symbol.h  Table.cpp  Table.h
visitors/: FunctionCallVisitor.cpp  FunctionCallVisitor.h  Interpreter.cpp  Interpreter.h  IrtreeBuildVisitor.cpp  IrtreeBuildVisitor.h  PrintVisitor.cpp  PrintVisitor.h  SymbolTreeVisitor.cpp  SymbolTreeVisitor.h  TemplateVisitor.cpp  TemplateVisitor.h  TypeCheckerVisitor.cpp  TypeCheckerVisitor.h  Visitor.h  elements.h  forward_decl.h
